<resources>
    <string name="app_name">Distance Tracking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="continue_button">Continue</string>

    <string name="permission_text">Welcome to Distance Tracker. In order to use oru application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap to button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="api_key" translatable="false">AIzaSyA5EPHgMRp9Wlb3YEOs3yMZwCtstv3yxL0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tap_on_location">Tap on my location button</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>

</resources>